# drift-aware-mlops-pipeline

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  deploy.yml  docker.yml  paper.yml
architecture/: architecture.mmd  dataflow.mmd
data/processed/: features.txt
data/raw/: README.md
demo_artifacts/: DEMO_VIDEO.md  README.md  README_demo_artifacts.txt  live_localhost_walkthrough.webm
deploy/docker/: Dockerfile.api  Dockerfile.drift  Dockerfile.mlflow  Dockerfile.trainer
deploy/prometheus/: alerts.yml  prometheus.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  CI_CD.md  DEMO_GUIDE.md  MONITORING.md  PROJECT_QUALITY_CHECKLIST.md  RESEARCH.md  RESULTS.md  RUBRIC_MAPPING.md  SETUP.md  TROUBLESHOOTING.md  VIDEO_DESCRIPTION.md
experiments/results/: results.csv  results.json  stats.json
notebooks/: 01_walkthrough.ipynb
paper/: main.tex  presentation_outline.md  refs.bib  results.tex
presentation/: Drift-Aware-MLOps-Final-Defense.pptx
scripts/: capture_demo_artifacts.py  fill_paper_numbers.py  full_experiment.sh  make_submission.py  plot_results.py  quick_experiment.sh  record_live_localhost_demo.py  render_architecture.py  smoke_check.sh
src/: __init__.py
tests/: __init__.py  test_api.py  test_drift_detectors.py  test_metrics.py  test_models.py  test_prequential.py  test_synthetic_streams.py
(+30 files in other folders)
